<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pen Pal</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_activity_profile">ProfilePage</string>
    <string name="title_activity_message_sent">MessageSent</string>
    <string name="title_activity_receive_message">ReceiveMessage</string>
    <string name="title_activity_meet_pen_pal">Meet Pen Pal</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="title_activity_make_message">MakeMessage</string>
    <string name="action_settings">Settings</string>
    <string name="home_button">Home</string>
    <string name="back_button">Back</string>
    <string name="action_home">Home</string>
    <string name="action_back">Back</string>
    <string name="hello_user">Welcome Back, Jack Jack!</string>
    <plurals name="unread_messages">
        <item quantity="one">You have 1 unread messages</item>
        <item quantity="other">You have %1$d unread messages</item>
    </plurals>
    <string name="friend_list_button">Friend\'s List</string>
    <string name="friend_list_text">My Friends</string>
    <string name="new_pen_pal_button">Make a New Pen Pal!</string>
    <string name="new_pen_pal_text">Meet a New Pen Pal!</string>
    <string name="send_message_text">Send a message\n to %s!</string>
    <string name="message_sent_text">Message been sent\n to\n %s!</string>
    <string name="text_message">Write</string>
    <string name="draw_message">Draw</string>
    <string name="voice_message">Talk</string>
    <string name="from_user">From %1$s</string>
    <string name="to_user">To %1$s</string>
    <string name="reply_button">Reply</string>
    <string name="clear_button">Redo</string>
    <string name="research_pen_pal">Search Again</string>
    <string name="send_message_button">Send Message!</string>
    <string name="user_profile">%1$s</string>
    <string name="country">Country From: Spain</string>
    <string name="language">Language: English, Spanish</string>
    <string-array name="suggested_questions">
        <item>What are you learning in school? </item>
        <item>What did you eat for breakfast? </item>	</string-array>
    <string name="send_another">
        Send Another
</string>
    <string name="undo">
        undo
</string>
</resources>