<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SendMessage" >

        <fragment
            android:id="@+id/fragmentHeader"
            android:name="edu.berkeley.cs160.off_by_1.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_header" />
    
    <TextView
        android:id="@+id/sendMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/send_message_text"
        android:layout_below="@id/fragmentHeader"
        android:textSize="25sp" />

    <Button
        android:id="@+id/voiceMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/voice_message"
        android:onClick="goToVoiceMessage"
         />

    <Button
        android:id="@+id/textMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/drawMessageButton"
        android:layout_alignBottom="@+id/drawMessageButton"
        android:layout_marginLeft="31dp"
        android:layout_toRightOf="@+id/drawMessageButton"
        android:text="@string/text_message"
        android:onClick="goToTextMessage"
         />

    <Button
        android:id="@+id/drawMessageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/voiceMessageButton"
        android:layout_alignBottom="@+id/voiceMessageButton"
        android:layout_centerHorizontal="true"
        android:text="@string/draw_message"
        android:onClick="goToDrawMessage"
         />

</RelativeLayout>