<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back_button"
        android:onClick="goBack"
         />
    
    
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/backButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/backButton"
        android:layout_alignBottom="@+id/backButton"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/home_button"
        android:onClick="goToHome"
         />


</RelativeLayout>
